# NFTickets

./: Anchor.toml  README.md  package-lock.json  package.json
app/: .gitignore  next.config.mjs  package-lock.json  package.json
app/src/app/: .gitignore  WalletContextProvider.tsx  layout.tsx  page.tsx  providers.tsx
app/src/app/api/artist/profile/: route.ts
app/src/app/artist/: page.tsx
app/src/app/artist/create/: ReclaimDemo.tsx  page.tsx
app/src/app/lib/: auth.ts  umi.ts
app/src/app/prisma/: schema.prisma
app/src/app/prisma/migrations/20241004093533_init/: migration.sql
app/src/app/prisma/migrations/20241005014202_profile_pic_update/: migration.sql
app/src/app/prisma/migrations/20241006034836_add_category_enum/: migration.sql
app/src/components/: coming-soon.tsx  navbar.tsx
app/src/components/artist/: profile-card.tsx
app/src/config/: site.ts
programs/nf-tickets/: Cargo.toml
programs/nf-tickets/src/: errors.rs  lib.rs
programs/nf-tickets/src/instructions/: create_event.rs  create_ticket.rs  initialize.rs  manager_setup.rs  mod.rs  scan_ticket.rs  withdraw_funds.rs
programs/nf-tickets/src/states/: manager.rs  mod.rs  platform.rs
tests/: nf-tickets.ts
